--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -6,5 +6,5 @@ Authors@R: person("Torsten", "Hothorn", role = c("aut", "cre"),
                     email = "Torsten.Hothorn@R-project.org")
 Description: Generates a template for a package-specific static web page
   using jekyll.
-Depends: R (>= 2.14.0), utils, tools, yaml, RefManageR, knitr
+Depends: R (>= 2.14.0), utils, tools, yaml, RefManageR, knitr, markdown
 License: GPL-2
